--- a/index.html
+++ b/index.html
@@ -484,11 +484,13 @@
 
   <section class="section offer-box" id="offers">
     <div class="ribbon">عرض خاص</div>
-    <img src="https://cdn.discordapp.com/attachments/1200935158409334905/1383447157251772416/IMG_2458.png?ex=684ed311&is=684d8191&hm=3907467b815cfbc33620180caf657d8e855927cdfa894696e6de9d8a7781537c&" alt="iPhone 16 Pro Max" />
+    <img src="https://cdn.discordapp.com/attachments/1200935158409334905/1383718048170508331/DD8403BA-1FEA-4575-BB5F-41A535C55381.jpg?ex=684fcf5a&is=684e7dda&hm=936524410e36cd0c4ccaa4616b1a0b98defd3c40a3d7c53c163cf426a92855f0&" alt="iPhone 16 Pro Max" />
 <script>
   // مصفوفة بصري لصور العرض (ضع مسارات صورك هنا)
   const slideImages = [
-    "https://cdn.discordapp.com/attachments/1200935158409334905/1383447157251772416/IMG_2458.png?ex=684ed311&is=684d8191&hm=3907467b815cfbc33620180caf657d8e855927cdfa894696e6de9d8a7781537c&", // الصورة الأولى
+    "https://cdn.discordapp.com/attachments/1200935158409334905/1383716397326274701/IMG_2640.png?ex=684fcdd1&is=684e7c51&hm=66cdf63dbb1fc766f025301b66655fcf9c20cf559b261484103b1e5bb3cdc893&", // الصورة الأولى
+      "https://cdn.discordapp.com/attachments/1200935158409334905/1383478403117875301/Instagram_.png.png?ex=684f98eb&is=684e476b&hm=87be0c67fb61a0385ad239665e91f74a260f965ee07c184e3755c1017d7de079&", // الصورة الأولى
+
     "https://cdn.discordapp.com/attachments/1200935158409334905/1383447167082954873/IMG_2335.png?ex=684ed313&is=684d8193&hm=5c09b40bf693b2660da279977e2e6de98572f0c7b5a82871583768a74fb50baa&" // الصورة الثانية
   ];
   
@@ -538,8 +540,12 @@
       <img src="emkan-logo.png" alt="شعار إمكان" />
       <img src="bank1-logo.png" alt="شعار البنك 1" />
       <img src="bank2-logo.png" alt="شعار البنك 2" />
-      <img src="security-logo.png" alt="شعار الأمان" />
+      <img src="security-logo.png" alt
+     ="شعار الأمان" />
+    <img src="https://cdn.discordapp.com/attachments/1378768231577288746/1383710753881587873/BAE1AC3B-32F2-4FB2-81E2-4DC0E3E3BD43.jpg?ex=684fc88f&is=684e770f&hm=f1d17e6a8d46739e44344a8f783d3be3d846e463bd0bcce2eb8dc4c103ab44bb&" alt="شعار الأمان" />
     </div>
+ 
+
   </section>
 
   <section class="testimonials" id="testimonials" aria-label="آراء العملاء">
