--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
     <h2>الأسئلة الشائعة</h2>
     <p><strong>هل أحتاج إلى كفيل؟</strong> لا، التمويل متاح بدون كفيل.</p>
     <p><strong>ما هي مدة التقسيط؟</strong> حتى 5 أشهر.</p>
-    <p><strong>كيف أقدم؟</strong> فقط قدم طلبك عبر الموقع وسنتواصل معك خلال دقائق.</p>
+    <p><strong>كيف أقدم؟</storong>فقط قدم طلب عبر الموقع ونتواصل معك خلال دقايق.</p>
   </section>
 
   <section class="section" id="contact">
