--- a/index.html
+++ b/index.html
@@ -545,11 +545,11 @@
     <h2>لماذا 4 ستور؟</h2>
     <p>ثقة، سرعة، سهولة، وأمان في تمويلك لشراء الأجهزة الإلكترونية بدون تعقيد.</p>
     <div class="trust-logos" aria-label="شعارات شركات وشركاء">
-      <img src="emkan-logo.png" alt="شعار إمكان" />
-      <img src="bank1-logo.png" alt="شعار البنك 1" />
-      <img src="bank2-logo.png" alt="شعار البنك 2" />
+      <img src="emkan-logo.png" alt=" إمكان" />
+      <img src="bank1-logo.png" alt="مصرف الراجحي" />
+      <img src="bank2-logo.png" alt="بنك نيوم" />
       <img src="security-logo.png" alt
-     ="شعار الأمان" />
+     ="4 store" />
     
     </div>
  
