--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 <script>
   // مصفوفة بصري لصور العرض (ضع مسارات صورك هنا)
   const slideImages = [
-    "https://cdn.discordapp.com/attachments/1200935158409334905/1383718048170508331/DD8403BA-1FEA-4575-BB5F-41A535C55381.jpg?ex=6852725a&is=685120da&hm=60c848026095466b816471328467183df8c81694009349ca1f0853ce74a3b198&",
+    "1.png",
     "https://cdn.discordapp.com/attachments/1200935158409334905/1384656281922703410/IMG_2681.png?ex=68533927&is=6851e7a7&hm=6fac5ef9e577cfaeda0a1dacac71e3982ee7d1f0e76953070a677a7507e2c574&",
     "https://cdn.discordapp.com/attachments/1200935158409334905/1384664695340011591/png.png?ex=685340fd&is=6851ef7d&hm=37a5e8392d7e1228fb5eb6ea58afd04ea474be75166d767f17920e3f00c46c79&",
     "https://cdn.discordapp.com/attachments/1200935158409334905/1384629387269374113/IMG_2640.png?ex=6853201b&is=6851ce9b&hm=95f22d726bf47b98971f39f7c3b6bf174165c3d3b5a2367317a640091bc2be19&", // الصورة الأولى
